--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ Package: nest
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, python3, libltdl-dev,
 	libreadline-dev, libncurses-dev, libgsl-dev, openmpi-bin, dh-python,
-	python3-dev, libopenmpi-dev, libgomp1, libomp-dev, libibverbs-dev, libpcre3, libpcre3-dev, jq,
+	python3-dev, libopenmpi-dev, libgomp1, libomp-dev, libibverbs-dev, jq,
 	python3-numpy, python3-pandas, python3-scipy, python3-matplotlib, python3-mpi4py, python3-setuptools,
 	python3-pydot, python3-tk, cython3
 Description: NEST is a simulator for networks of spiking neurons.
