--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Steffen Graber <s.graber@fz-juelich.de>
 Build-Depends: cmake, debhelper (>= 9), autotools-dev,
 	software-properties-common, build-essential, autoconf, python3, dh-python,
 	libltdl-dev, libreadline-dev, libncurses-dev, libgsl-dev, openmpi-bin,
-	python3-dev, libopenmpi-dev, libgomp1, libomp-dev, libibverbs-dev, libpcre3, libpcre3-dev, jq,
+	python3-dev, libopenmpi-dev, libgomp1, libomp-dev, libibverbs-dev, jq,
 	python3-numpy, python3-pandas, python3-scipy,python3-matplotlib, python3-mpi4py, python3-setuptools, python3-tk,
 	python3-pydot, cython3, libtool
 Standards-Version: 4.1.1
