--- a/.github/workflows/nestbuildmatrix.yml
+++ b/.github/workflows/nestbuildmatrix.yml
@@ -368,6 +368,12 @@ jobs:
     runs-on: "ubuntu-20.04"
     if: false
     needs: [pydocstyle, rstcheck, vale]
+    strategy:
+      fail-fast: false
+      matrix:
+        use:
+          - "nonest"
+          - "nest"
     steps:
       - name: "Checkout repository content"
         uses: actions/checkout@v3
@@ -385,9 +391,10 @@ jobs:
         run: |
           conda info
           conda env create -p conda
-
+     
       - name: "Test-build documentation"
         shell: bash -l {0}
+        if: "${{ contains(matrix.use, 'nonest') }}"
         run: |
           conda activate conda/
           mkdir -pv build
@@ -395,6 +402,21 @@ jobs:
           cmake -DCMAKE_INSTALL_PREFIX=../install ..
           make html |& tee sphinx-output.log
 
+      - name: "Test-build documentation with NEST installed"
+        shell: bash -l {0}
+        if: "${{ contains(matrix.use, 'nest') }}"
+        run: |
+          conda activate conda/
+          mkdir -pv build
+          cd build
+          cmake -DCMAKE_INSTALL_PREFIX=../install ..
+          make VERBOSE=1
+          make install
+          . ../install/bin/nest_vars.sh
+          python -c "import nest; nest.help();"          
+          make html |& tee sphinx-output.log
+
+          
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
@@ -459,7 +481,7 @@ jobs:
           sudo apt-get install tcl8.6 tcl8.6-dev tk8.6-dev
           # Install MPI dependencies regardless of whether we compile NEST with or without MPI, so the installation of MPI4Py works 
           sudo apt-get install openmpi-bin libopenmpi-dev
-          sudo apt-get install libboost-filesystem-dev libboost-regex-dev libboost-wave-dev libboost-python-dev libboost-program-options-dev libboost-test-dev
+          sudo apt-get install libboost-filesystem-dev libboost-regex-dev libboost-wave-dev libboost-python-dev libboost-program-ocondaptions-dev libboost-test-dev
           sudo apt-get install pkg-config
           sudo ldconfig
 
