--- a/.github/workflows/full_doc_build.yml
+++ b/.github/workflows/full_doc_build.yml
@@ -50,7 +50,7 @@ jobs:
           - name: Upload artifacts
             uses: actions/upload-artifact@v3
             with:
-              name: "Full doc output"
+              name: "Full_doc_output"
               path: |
                 build/sphinx-output.log
                 build/doc/_build/html/
