--- a/.github/workflows/full_doc_build.yml
+++ b/.github/workflows/full_doc_build.yml
@@ -34,8 +34,8 @@ jobs:
               pip install -r doc/requirements.txt
               # The pandoc executable, which is required, cannot be installed via pip see: https://stackoverflow.com/a/71585691
               sudo apt install pandoc
-       
-          - name: "Test-build documentation with NEST installed"
+
+          - name: "Build NEST"
             shell: bash -l {0}
             run: |
               mkdir -pv build
@@ -45,8 +45,13 @@ jobs:
               make VERBOSE=1
               make install
               . ../install/bin/nest_vars.sh
-              python -c "import nest; nest.help();" 
-              cd ../doc/htmldoc
+              python -c "import nest; nest.help();"             
+       
+          - name: "Test-build documentation with NEST installed"
+            shell: bash -l {0}
+            run: |
+              . install/bin/nest_vars.sh
+              cd doc/htmldoc
               sphinx-build . ../_build/html -b html |& tee sphinx-output.log
     
           - name: Upload artifacts
