--- a/.github/workflows/full_doc_build.yml
+++ b/.github/workflows/full_doc_build.yml
@@ -190,7 +190,7 @@ jobs:
             run: |
               pwd
               cd build/
-              chmod -v u+x ${NEST_RESULT}/share/nest/testsuite/do_tests.sh
+              chmod -v u+x install/share/nest/testsuite/do_tests.sh
               make VERBOSE=1 installcheck
         
           - name: "USERDOC with images"
@@ -199,7 +199,6 @@ jobs:
               . install/bin/nest_vars.sh
               cd doc/htmldoc
               sphinx-build . ../_build/html -b html |& tee sphinx-output.log
-            
               
           - name: "Upload install and test results"
             uses: actions/upload-artifact@v3
