--- a/.github/workflows/full_doc_build.yml
+++ b/.github/workflows/full_doc_build.yml
@@ -151,7 +151,7 @@ jobs:
 
               cd "build/"
               cmake \
-                -DCMAKE_INSTALL_PREFIX="install/" \
+                -DCMAKE_INSTALL_PREFIX="../install/" \
                 -DCMAKE_CXX_FLAGS="$CXX_FLAGS" \
                 -Dwith-optimize=${{ contains(matrix.use, 'optimize') && 'ON' || 'OFF' }} \
                 -Dwith-warning=${{ contains(matrix.use, 'warning') && 'ON' || 'OFF' }} \
